--- a/compose.yaml
+++ b/compose.yaml
@@ -12,6 +12,6 @@ services:
       - GOOGLE_CLIENT_ID
       - GOOGLE_CLIENT_SECRET
       - SECRET_KEY_BASE
-
+    env_file: ".env"
     ports:
-      - "3000:80"
+      - "3000:3000"
